- html validator correction for search page, chart page, contact page, about - search page optimization and documentation - search page direction of sorting feature - report page based on Scholarly html format
